elements/pfe-cta/demo/demo.css
h1,
h2 {
  margin: 15px 0 10px;
}

hr {
  border-bottom: 1px solid #ddd;
  width: 100%;
}

pfe-band {
  --pfe-band--Padding--horizontal: 60px;
  --pfe-band--Width: 100%;
}

pfe-band[pfe-color="lightest"] pfe-card[pfe-color="lightest"] {
  --pfe-card--Border: 1px solid rgba(45, 45, 45, 0.3);
}

.resize {
  display: flex;
  flex-flow: row nowrap;
  resize: horizontal;
  overflow: auto;
  border: 1px solid #ddd;
  width: 500px;
  padding: 10px;
}

.resize > pfe-cta:first-child {
  margin-right: 20px;
}

.card-layout {
  display: flex;
  flex-flow: row wrap;
  display: grid;
  grid-gap: 10px;
  grid-template-columns: repeat(auto-fit, minmax(100px, max-content));
  margin-top: -10px;
  margin-left: -20px;
}

.card-layout > pfe-cta,
.card-layout .cta-align > pfe-cta {
  margin-top: 10px;
  margin-left: 20px;
}

.custom-dark-band {
  padding: 60px 15px;
  background: #222;
  --theme: dark;
}

.custom-saturated-band {
  padding: 60px 15px;
  background: #0c8488;
  --theme: saturated;
}

